// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions getUserOrders 1`] = `
Array [
  Object {
    "type": "userOrders",
    "value": Array [
      Object {
        "test": "test",
      },
    ],
  },
]
`;

exports[`actions scanStatus 1`] = `
Array [
  Object {
    "type": "status",
    "value": Object {
      "test": "test",
    },
  },
]
`;

exports[`actions statusUpdate 1`] = `
Object {
  "type": "status",
  "value": Array [
    Object {
      "test": "test",
    },
  ],
}
`;

exports[`actions userOrdersUpdte 1`] = `
Object {
  "type": "userOrders",
  "value": Array [
    Object {
      "test": "test",
    },
  ],
}
`;
